# cue

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package.json
.playwright-mcp/: page-2026-06-27T13-56-45-988Z.yml  page-2026-06-27T13-56-56-105Z.yml  page-2026-06-27T13-57-03-897Z.yml  page-2026-06-27T13-57-07-879Z.yml  page-2026-06-27T14-09-29-246Z.yml  page-2026-06-27T14-09-39-658Z.yml  page-2026-06-27T14-10-11-404Z.yml  page-2026-06-27T14-10-16-969Z.yml  page-2026-06-27T14-33-50-248Z.yml  page-2026-06-27T14-33-54-014Z.yml  page-2026-06-27T14-33-59-695Z.yml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  db.py  deps.py  ir_format.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: admin.py  attachments.py  auth.py  capture.py  importexport.py  projects.py  prompts.py  runs.py  snippets.py  sync.py
backend/tests/: conftest.py  test_api.py  test_gap_edges.py  test_ir_format.py  test_snippets.py  test_sync.py
backend/tests/fixtures/: ir-backup-snippets.json
cue-runner/: .env.example  README.md  pyproject.toml  start.sh
cue-runner/cue_runner/: __main__.py  api.py  capture.py  command.py  config.py  deliver.py  executor.py  paths.py  runner.py  stream.py
cue-runner/hooks/: capture_hook.py
cue-runner/tests/: test_api_client.py  test_capture.py  test_orchestration.py  test_runner.py
deploy/: Caddyfile  nginx.conf
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
scripts/: gen_password_hash.py  (+1 more)
(+57 files in other folders)
